--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 alt=""></div>
         <div class="about-text">
             <div class="blog-time">2024/10/11</div>
-            <div class="about-title">
+            <div class="about-title d-center">
                 <span>前端開發 x 職涯成長</span>
                 <span class="blue-tag">最新文章</span>
             </div>
@@ -92,7 +92,7 @@
                 <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-web-camp/desktop/blog/photo3.png?raw=true"
                     alt="">
                 <div class="blog-time">2024/07/08</div>
-                <div class="blog-tag"><a href="#">#面試準備</a> <a href="#">#工程師求職</a><span class="blue-tag">最新文章</span>
+                <div class="blog-tag"><a href="#">#面試準備</a> <a href="#">#工程師求職</a><span class="blue-tag">人氣文章</span>
                 </div>
                 <h2>前端面試不再慌：破解常見提問的三大策略</h2>
                 <p class="blog-text">
